# sample-huggingface-sagemaker-neuron-kiro-power

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-LICENSES  power.json
demo/: app.py  requirements.txt
docs/: distributed-training.md  model-optimization.md  sagemaker-deployment.md  torchneuron.md
docs/examples/: deploy-llama-70b-sagemaker.md  finetune-qwen3-trainium.md
mcp/sagemaker-neuron-server/: pyproject.toml  run_server.sh
mcp/sagemaker-neuron-server/sagemaker_neuron_server/: __init__.py  __main__.py
mcp/sagemaker-neuron-server/sagemaker_neuron_server/scripts/: launch.py  requirements.txt  train.py
mcp/sagemaker-neuron-server/sagemaker_neuron_server/tools/: deploy.py  endpoint.py  recommend.py  training.py
mcp/sagemaker-neuron-server/sagemaker_neuron_server/utils/: aws.py
steering/: distributed-training.md  model-optimization.md  sagemaker-deployment.md  torchneuron.md
